[package]
name = "strngr"
version = "0.1.0"
authors = ["Sam Thomas <m@kali.ai>"]

[dependencies]
base64 = "0.9"
byteorder = "1.2"
capstone = { git = "https://github.com/BaDSeED-SEC/capstone-rs" }
clap = "2.31"
failure = "0.1"
failure_derive = "0.1"
itertools = "0.7"
noisy_float = "0.1"
num-traits = "0.2"
min-max-heap = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.0"

rida = { git = "https://github.com/BaDSeED-SEC/rida" }
